fix: add margin-top/bottom to sections for visible spacing

--- a/frontend-react/src/styles/landing.css
+++ b/frontend-react/src/styles/landing.css
@@ -1645,16 +1645,16 @@ img {
 }
 
 .leave-order {
-  padding-bottom: 100px;
+  padding: 0 0 120px;
 }
 @media (max-width: 1024px) {
   .leave-order {
-    padding-bottom: 70px;
+    padding-bottom: 90px;
   }
 }
 @media (max-width: 576px) {
   .leave-order {
-    padding-bottom: 50px;
+    padding-bottom: 70px;
   }
 }
 
@@ -2075,15 +2075,21 @@ img {
 }
 
 .place-task-info {
-  padding: 200px 0 180px;
+  margin-top: 80px;
+  margin-bottom: 100px;
+  padding: 120px 0 180px;
 }
 @media (max-width: 1024px) {
   .place-task-info {
+    margin-top: 60px;
+    margin-bottom: 70px;
     padding: 70px 0 100px;
   }
 }
 @media (max-width: 768px) {
   .place-task-info {
+    margin-top: 40px;
+    margin-bottom: 50px;
     padding: 10px 0 80px;
   }
 }
@@ -2460,16 +2466,19 @@ img {
 
 
 .about {
+  margin-top: 80px;
   padding: 125px 0 130px;
   background-color: #f8f9fa;
 }
 @media (max-width: 1024px) {
   .about {
+    margin-top: 60px;
     padding: 100px 0;
   }
 }
 @media (max-width: 576px) {
   .about {
+    margin-top: 40px;
     padding: 64px 0;
   }
 }
